tests/fixtures/invalid/max_set_str.py
# Cannot call max() with Set[int], Str
x = max({1, 2, 3}, "hello")
